--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
 
-    <title>GraphQL - React Example</title>
+    <title>Context API - React</title>
   </head>
   <body>
     <div id="root"></div>
